--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
   </head>
   <body>
     <header>
+      <h1>
+        <img src="" alt="" />
+        <div class="title">
 
+        </div>
+      </h1>
     </header>
-
+    <!-- patrick -->
     <div class="weather">
 
     </div>
 
+
+    <!-- kathleen -->
     <div class="news">
 
     </div>
 
+
+    <!-- andrew -->
     <div class="calendar">
 
     </div>
