Styling and possible solution to location via IP

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!-- andrew -->
     <div class="calendar">
 
-      <form class="" action="index.html" method="post">
+      <form class="bandInput" action="index.html" method="post">
         <input id ="cityinput" type="text" placeholder="Enter City and State for Bands in your area">
       </form>
 
       <div class="events"></div>
 
-    </div>
+      </div>
 
     <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
     <script src="bower_components/moment/moment.js" charset="utf-8"></script>
