updated band stuff

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="calendar">
 
       <form class="bandInput" action="index.html" method="post">
-        <input id ="cityinput" type="text" placeholder="Enter City and State for Bands in your area">
+        <input autocomplete="off" id ="cityinput" type="text" placeholder="Enter City and State for Bands in your area">
       </form>
 
       <div class="events"></div>
