--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
-      <h1>
-        <img src="" alt="" />
-        <div class="title">
-
-        </div>
-      </h1>
+       <div class="title"><span class="l">L<span>OVELACE</div>
     </header>
     <!-- patrick -->
     <div class="weatherContainer">
@@ -31,7 +26,6 @@
     </script>
     <script src="weather.js">
     </script>
-
 
     <!-- kathleen -->
     <div class="news">
