--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
   </head>
   <body>
     <header>
-       <div class="title"><span class="l">L<span>OVELACE</div>
+       <div class="title">LOVELACE<span class="smaller">Widgets For Chrome</span></div>
+       <span class='timeContainer'></span>
+       </div>
     </header>
     <!-- patrick -->
+    <h4>weather-</h4>
     <div class="weatherContainer">
-
-
+      </div>
+      <div class="customWeather">
+        <form class="weatherInput" action="index.html" method="post">
+          <input autocomplete="off" class="weatherFind" type="text" name="otherWeather">
+        </form>
+      </div>
     </div>
+
     <script src="bower_components/moment/moment.js">
     </script>
     <script src="bower_components/jquery/dist/jquery.js">
@@ -26,12 +34,14 @@
     </script>
 
     <!-- kathleen -->
+    <h4>News-<h4/>
     <div class="news">
 
     </div>
 
 
     <!-- andrew -->
+    <h4>Band Search-</h4>
     <div class="calendar">
 
       <form class="bandInput" action="index.html" method="post">
