added search bar to news.js

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <!-- kathleen -->
     <div class="news">
 
+      <form class="newsSearch" action="index.html" method="post">
+        <input autocomplete="off" id ="newsInput" type="text" placeholder="Search...">
+      </form>
+
     </div>
 
 
